SERVER-73137 Make TransactionResources::recoveryUnitState optional